# learning-sql-querying-5b4a9576

./: .env.sample  .gitignore  .prettierrc  Cargo.toml  README.md  docker-compose.yml  package.json
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-data/: Cargo.toml
crates/libs/lib-data/src/: lib.rs
crates/libs/lib-data/src/database/: customers.rs  prelude.rs
crates/libs/lib-data/src/database_sales/: customers.rs  employees.rs  mod.rs  orders.rs  ordersarchive.rs  prelude.rs  products.rs
crates/libs/lib-progress/: Cargo.toml
crates/libs/lib-progress/src/: lib.rs
crates/libs/lib-progress/src/model/: df_customers.rs  df_orders.rs  mod.rs
crates/libs/lib-progress/src/progress/: mod.rs  p_001.rs  p_002.rs  p_003.rs  p_004.rs  p_005.rs  p_006.rs  p_007.rs  p_008.rs  p_009.rs  p_010.rs  p_011.rs  p_012.rs  p_013.rs  p_014.rs  p_015.rs  p_016.rs  p_017.rs  p_018.rs  p_019.rs  p_020.rs  p_021.rs  p_022.rs  p_023.rs  p_024.rs  p_025.rs  p_026.rs  p_027.rs  p_028.rs  p_029.rs  p_030.rs  p_031.rs  p_032.rs  p_033.rs  p_034.rs  p_035.rs  p_036.rs  p_037.rs  p_038.rs  p_039.rs  (+9 more)
crates/libs/lib-progress/src/utils/: compare.rs  database.rs  debug.rs  mod.rs
crates/libs/lib-progress/src/utils/dataframe/: customers.rs  mod.rs  orders.rs
crates/libs/lib-progress/src/utils/dataframe/sales/: customers.rs  employees.rs  mod.rs  orders.rs  orders_archive.rs  products.rs
docker/: 03-init.sql
scripts/: cargo_pkg.bash  node_pkg.bash
src/: lib.rs  main.ipynb  main.rs
src/common/: connection.rs  error.rs
src/database/: mod.rs  orders.rs
src/progress/: mod.rs  p_001.rs  p_002.rs  p_003.rs
