[package]
name = "learning-sqlx-sea-orm-5b4a9576"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
polars = { version = "0.51.0", features = ["lazy", "dtype-categorical"] }
sea-orm = { version = "1.1.16", features = ["runtime-tokio-rustls", "sqlx-postgres"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_with = "3.14.1"
sqlx = "0.8.6"
tokio = { version = "1.47.1", features = ["full"] }
