[package]
name = "learning-sql-querying-5b4a9576"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1
debug = 1

[workspace]
resolver = "2"
members = [
    "crates/libs/lib-core",
    "crates/libs/lib-data",
    "crates/libs/lib-progress",
]

[dependencies]
lib-core = { path = "crates/libs/lib-core" }
lib-data = { path = "crates/libs/lib-data" }
lib-progress = { path = "crates/libs/lib-progress" }

dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
tokio = { version = "1.47.1", features = ["full"] }
