[package]
name = "lib-core"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-data = { path = "../lib-data" }

polars = { version = "0.51.0", features = ["lazy", "dtype-categorical"] }
sea-orm = { version = "1.1.16", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = "0.8.6"
thiserror = "2.0.17"
