[package]
name = "lib-progress"
version = "0.1.0"
edition = "2024"

[dependencies]
lib-core = { path = "../lib-core" }
lib-data = { path = "../lib-data" }

chrono = "0.4.42"
polars = { version = "0.51.0", features = [
    "lazy",
    "dtype-categorical",
    "is_in",
] }
sea-orm = { version = "1.1.16", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = "0.8.6"
